# embedded-test-example

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
tests/: async_test.rs  example_test.rs
