[package]
name = "embedded-test-example"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/probe-rs/embedded-test-example"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp-hal = { version = "0.16.1", features = ["esp32c6"] }


# dependencies when using the log feature
log = { version = "0.4.20", optional = true }

# dependencies when using the demft feature
# Note: You must adapt .cargo/config when enabling the defmt feature
defmt = { version = "0.3.6", optional = true }
defmt-rtt = { version = "0.4.0", optional = true }

# dependencies when using the embassy feature
# Note: You need to enable at least one executor feature on embassy 0.5.x
embassy-executor = { default-features = false, version = "0.5.0", features = ["executor-thread", "arch-riscv32"], optional = true }


[dev-dependencies]
embedded-test = { git = "https://github.com/probe-rs/embedded-test", branch = "next" }


[features]
default = ["log"]
embassy = ["dep:embassy-executor", "embedded-test/embassy"]
log = ["dep:log", "embedded-test/log", "embedded-test/init-log"]
defmt = ["dep:defmt", "dep:defmt-rtt", "embedded-test/defmt"]


[[test]]
name = "example_test"
harness = false


[[test]]
name = "async_test"
required-features = ["embassy"]
harness = false